preflight/tests/ui/fail-invalid-syntax.stderr
error: expected `,`
 --> $DIR/fail-invalid-syntax.rs:6:32
  |
6 | #[avionics_harness(ooooo , eee / 0099 | gee)]
  |                                ^
